homematic/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: homematic
  namespace: tsebra-home
  labels:
    app: homematic

spec:
  replicas: 1
  selector:
    matchLabels:
      app: homematic
  template:
    metadata:
      labels:
        app: homematic
    spec:
      # hostNetwork: true
      # securityContext:
      #   capabilities:
      #     add:
      #       - NET_ADMIN
      containers:
        - name: homematic
          image: ghcr.io/jens-maus/raspberrymatic:3.79.6.20250220
          ports:
            - containerPort: 43439
              name: eq3configd
              protocol: UDP
            - containerPort: 2010
              name: hmip
              protocol: TCP
            - containerPort: 32010
              name: hmip-proxy
              protocol: TCP
            - containerPort: 42010
              name: hmip-tls
              protocol: TCP
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 8099
              name: http-proxy
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 8181
              name: rega
              protocol: TCP
            - containerPort: 8183
              name: rega-proxy
              protocol: TCP
            - containerPort: 48181
              name: rega-tls
              protocol: TCP
            - containerPort: 2001
              name: rfd
              protocol: TCP
            - containerPort: 32001
              name: rfd-proxy
              protocol: TCP
            - containerPort: 42001
              name: rfd-tls
              protocol: TCP
            - containerPort: 161
              name: snmp
              protocol: UDP
            - containerPort: 22
              name: ssh
              protocol: TCP
            - containerPort: 1900
              name: upnp
              protocol: UDP
            - containerPort: 9292
              name: virt-dev
              protocol: TCP
            - containerPort: 39292
              name: virt-dev-proxy
              protocol: TCP
            - containerPort: 49292
              name: virt-dev-tls
              protocol: TCP
            - containerPort: 2000
              name: wired
              protocol: TCP
            - containerPort: 32000
              name: wired-proxy
              protocol: TCP
            - containerPort: 42000
              name: wired-tls
              protocol: TCP
            - containerPort: 1999
              name: xmlrpc
              protocol: TCP
            - containerPort: 31999
              name: xmlrpc-proxy
              protocol: TCP
            - containerPort: 41999
              name: xmlrpc-tls
              protocol: TCP
          # readinessProbe:
          #   failureThreshold: 3
          #   periodSeconds: 10
          #   successThreshold: 1
          #   tcpSocket:
          #     port: 80
          #   timeoutSeconds: 1
          # resources: {}
          # securityContext:
          #   privileged: true
          # startupProbe:
          #   failureThreshold: 30
          #   periodSeconds: 5
          #   successThreshold: 1
          #   tcpSocket:
          #     port: 80
          #   timeoutSeconds: 1
          # terminationMessagePath: /dev/termination-log
          # terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /lib/modules
              name: modules
              readOnly: true
            - mountPath: /sys
              name: sys
            - mountPath: /usr/local
              name: data
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 8123
          # initialDelaySeconds: 0
          # failureThreshold: 3
          # timeoutSeconds: 1
          # periodSeconds: 10
          # readinessProbe:
          #   tcpSocket:
          #     port: 8123
          #   initialDelaySeconds: 0
          #   failureThreshold: 3
          #   timeoutSeconds: 1
          #   periodSeconds: 10
          # startupProbe:
          #   tcpSocket:
          #     port: 8123
          #   initialDelaySeconds: 0
          #   failureThreshold: 30
          #   timeoutSeconds: 1
          #   periodSeconds: 5

      volumes:
        - name: modules
          hostPath:
            path: /lib/modules
            type: Directory
        - name: sys
          persistentVolumeClaim:
            claimName: homematic-sys
        - name: data
          persistentVolumeClaim:
            claimName: homematic-data
